Edit flex values to reduce alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    flex: auto;
 }
 
 .header {
@@ -26,6 +27,7 @@ body {
     margin-top: -10px;
     margin-left: -10px;
     margin-right: -10px;
+    flex: auto;
 
 }
 
@@ -77,6 +79,7 @@ img  {
     margin-right: 50px;
     margin-bottom: 50px;
     width: 500px;
+    flex: 1 0 0;
 }
 
 .description-content {
@@ -94,6 +97,7 @@ img  {
     width: 200px;
     padding: 25px 10px;
     margin-bottom: -10px;
+    flex: 0 1 0;
 }
 
 .right-sidebar-header {
